--- a/dist.ini
+++ b/dist.ini
@@ -1,16 +1,25 @@
 version = 0.001
 
-name    = File-Temp-MoreUtil
+name    = File-Temp-MoreUtils
 
 [@Author::PERLANCAR]
-:version=0.603
+:version=0.604
 
 [Prereqs / TestRequires]
+Test::Exception=0
 ;Test::More=0.98
+Test::More=0.98
 
 [Prereqs]
 perl=5.010001
 strict=0
 warnings=0
 Exporter=5.57
+Fcntl=0
 File::Temp=0.2307
+
+[Prereqs / DevelopX_spec]
+-phase=develop
+-relationship=x_spec
+Rinci=1.1.96
+
